# chatroom

./: .gitattributes  .gitignore
server/: CMakeLists.txt
server/chat_server/: CMakeLists.txt  chat_server.cpp  grpc_chat_client.cpp  grpc_chat_client.h  grpc_chat_server.cpp  grpc_chat_server.h  server.cpp  server.h  session.cpp  session.h  tcp_service.cpp  tcp_service.h  user_manager.cpp  user_manager.h
server/common/: CommonConfig.cmake  app_config.json  global.h  io_context_pool.h  my_stl.h  my_utils.cpp  my_utils.h  raii.h
server/common/boost/: io_context_pool.cpp
server/common/dao/: friend_apply_dao.cpp  friend_apply_dao.h  friend_relation_dao.cpp  friend_relation_dao.h  model.cpp  model.h  user.cpp  user.h  user_dao.cpp  user_dao.h
server/common/grpc_client/: grpc_status_client.cpp  grpc_status_client.h  grpc_stub_pool.h
server/common/my_lib/: common_result.h  config_manager.cpp  config_manager.h  json_object.h  my_utils.cpp  my_utils.h
server/gate_server/: CMakeLists.txt  global.h  grpc_status_client.cpp  grpc_status_client.h  http_connection.cpp  http_service.cpp  http_service.h  mysql_pool.h  redis_connection_pool.h  server.h
server/grpc_server/: grpc_server.cpp  verify_grpc_server.cpp  verify_grpc_server.h
server/proto_files/: my_grpc.grpc.pb.cc  my_grpc.grpc.pb.h  my_grpc.pb.cc  my_grpc.pb.h  my_grpc.proto  my_message.grpc.pb.cc  my_message.grpc.pb.h  my_message.pb.cc  my_message.pb.h  my_message.proto
server/src/: app_config.json  common_result.h  config_manager.cpp  config_manager.h  gate_server.cpp  global.h  grpc_status_client.h  grpc_stub_pool.h  grpc_verify_client.cpp  grpc_verify_client.h  http_connection.h  http_service.cpp  io_context_pool.cpp  json_object.h  my_stl.cpp  my_stl.h  status_grpc_client.cpp  status_grpc_client.h  user_dao.cpp  user_dao.h  user_service.cpp  verify_grpc_client.cpp  verify_grpc_client.h
src/: CMakeLists.txt  application_config.json  config_manager.cpp  gate_server.cpp  global.h  grpc_stub_pool.cpp  grpc_stub_pool.h  http_connection.cpp  http_connection.h  http_manager.h  http_service.cpp  http_service.h  io_context_pool.cpp  my_message.grpc.pb.cc  my_message.grpc.pb.h  my_message.pb.h  my_utils.h  mysql_pool.cpp  redis_connection_pool.cpp  redis_manager.cpp  redis_manager.h  server.cpp  server.h  singleton.h  user_dao.cpp  user_dao.h  user_service.cpp  user_service.h  verify_grpc_client.cpp  verify_grpc_client.h
(+98 files in other folders)
